add model to restaurants route

--- a/foodme/app/templates/restaurants.hbs
+++ b/foodme/app/templates/restaurants.hbs
@@ -1,1 +1,6 @@
-{{outlet}}
+<ul>
+  {{#each model as |restaurant| }}
+      <h4>{{restaurant.name}}</h4>
+      <p>{{restaurant.description}}</p>
+  {{/each}}
+</ul>
