--- a/foodme/app/templates/restaurants.hbs
+++ b/foodme/app/templates/restaurants.hbs
@@ -1,6 +1,23 @@
-<ul>
-  {{#each model as |restaurant| }}
-      <h4>{{restaurant.name}}</h4>
-      <p>{{restaurant.description}}</p>
-  {{/each}}
-</ul>
+<div class="row-fluid">
+	<div class="col-md-12">
+		<div class="panel panel-default">
+			<div class="panel-heading">
+				<h3 class="panel-title">Restaurantes encontrados</h3>
+			</div>
+
+			<div class="panel-body">
+				{{#each model as |restaurant| }}
+					<div class="media">
+						<a class="media-left">
+							<img class="media-object" src="#">
+						</a>
+						<div class="media-body">
+							<h4 class="media-heading">{{restaurant.name}}</h4>
+							{{restaurant.description}}
+						</div>
+					</div>
+				{{/each}}
+			</div>
+		</div>
+	</div>
+</div>
