--- a/foodme/app/templates/components/nav-menu.hbs
+++ b/foodme/app/templates/components/nav-menu.hbs
@@ -3,7 +3,7 @@
 
     <div class="navbar-header">
     	{{! Collapsed menu for small screens }}
-		<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-controls="navbar">
+		<button {{action 'toggleMenu'}} type="button" class="navbar-toggle {{unless isMenuOpened 'collapsed'}}" data-toggle="collapse" data-target="#navbar" aria-controls="navbar">
 			<span class="sr-only">Toggle navigation</span>
 			<span class="icon-bar"></span>
 			<span class="icon-bar"></span>
@@ -14,7 +14,7 @@
     	{{link-to appName "index" class="navbar-brand"}}
     </div>
 
-    <div class="collapse navbar-collapse" id="navbar">
+    <div class="collapse navbar-collapse {{if isMenuOpened 'in'}}" id="navbar">
 
     	{{! Menu links}}
         <ul class="nav navbar-nav">
