Add addon i18n and translations

--- a/foodme/app/templates/components/nav-menu.hbs
+++ b/foodme/app/templates/components/nav-menu.hbs
@@ -20,7 +20,7 @@
         <ul class="nav navbar-nav">
         	{{#each menuLinks as |link|}}
             	{{#link-to link.url tagName="li"}}
-            		<a href="">{{link.name}}</a>
+            		<a href="">{{t link.label}}</a>
             	{{/link-to}}
             {{/each}}
         </ul>
