--- a/foodme/app/templates/restaurants.hbs
+++ b/foodme/app/templates/restaurants.hbs
@@ -2,7 +2,7 @@
 	<div class="col-md-12">
 		<div class="panel panel-default">
 			<div class="panel-heading">
-				<h3 class="panel-title">Restaurantes encontrados</h3>
+				<h3 class="panel-title">{{t 'restaurants' count=model.length}}</h3>
 			</div>
 
 			<div class="panel-body">
