add helper for restaurant images

--- a/foodme/app/templates/restaurants.hbs
+++ b/foodme/app/templates/restaurants.hbs
@@ -9,7 +9,7 @@
 				{{#each model as |restaurant| }}
 					<div class="media">
 						<a class="media-left">
-							<img class="media-object" src="#">
+							<img class="media-object" src={{restaurant-img restaurant.id}}>
 						</a>
 						<div class="media-body">
 							<h4 class="media-heading">{{restaurant.name}}</h4>
