--- a/foodme/app/templates/components/nav-menu.hbs
+++ b/foodme/app/templates/components/nav-menu.hbs
@@ -27,17 +27,16 @@
 
     	{{! ChangeLanguage}}
 		<ul class="nav navbar-nav navbar-right">
-		  <li>
-			  {{#power-select
-			  selected=selectedLanguage
-			  options=languages
-			  class='dropdown'
-			  onchange=(action (mut selectedLanguage))
-			  as |language|
-			  }}
-				  {{language.name}}
-			  {{/power-select}}
-		  </li>
+			<li>
+				{{#power-select
+					selected=selectedLanguage
+					options=languages
+					class='dropdown'
+					onchange=(action (mut selectedLanguage))
+					as |language|}}
+					{{language.name}}
+				{{/power-select}}
+			</li>
 		</ul>
 
     </div>
