--- a/foodme/app/templates/restaurants.hbs
+++ b/foodme/app/templates/restaurants.hbs
@@ -1,12 +1,36 @@
 <div class="row-fluid">
-	<div class="col-md-12">
+
+	<div class="col-md-4">
 		<div class="panel panel-default">
 			<div class="panel-heading">
-				<h3 class="panel-title">{{t 'foundRestaurants' count=model.length}}</h3>
+				<h3 class="panel-title">{{t 'filterRestaurants'}}</h3>
+			</div>
+				<div class="panel-body">
+				   <label>{{t 'cuisine'}}</label>
+				   {{#power-select-multiple
+					  options=CUISINE_OPTIONS
+					  selected=selectedCuisins
+					  placeholder=(t 'selectCuisins')
+					  onchange=(action (mut selectedCuisins))
+					  as |cuisine|
+					}}
+					  {{cuisine.title}}
+					{{/power-select-multiple}}
+				 </div>
+			 <div class="panel-footer">
+				 <button {{action 'filter'}} class="btn btn-default">{{t 'filter'}}</button>
+			 </div>
+		</div>
+	</div>
+
+	<div class="col-md-8">
+		<div class="panel panel-default">
+			<div class="panel-heading">
+				<h3 class="panel-title">{{t 'foundRestaurants' count=filteredRestaurants.length}}</h3>
 			</div>
 
 			<div class="panel-body">
-				{{#each model as |restaurant| }}
+				{{#each filteredRestaurants as |restaurant| }}
 					<div class="media">
 						<a class="media-left">
 							<img class="media-object" src={{restaurant-img restaurant.id}} width="64" height="64">
