--- a/foodme/app/templates/restaurants.hbs
+++ b/foodme/app/templates/restaurants.hbs
@@ -6,6 +6,9 @@
 				<h3 class="panel-title">{{t 'filterRestaurants'}}</h3>
 			</div>
 				<div class="panel-body">
+					<label>{{t 'rating'}}</label>
+					{{star-rating rating=filterRating on-click='updateRating'}}
+
 				   <label>{{t 'cuisine'}}</label>
 				   {{#power-select-multiple
 					  options=CUISINE_OPTIONS
@@ -38,6 +41,7 @@
 						<div class="media-body">
 							<h4 class="media-heading">{{restaurant.name}}</h4>
 							{{restaurant.description}}
+							{{star-rating rating=restaurant.rating}}
 						</div>
 					</div>
 				{{/each}}
