--- a/foodme/app/templates/restaurants.hbs
+++ b/foodme/app/templates/restaurants.hbs
@@ -1,48 +1,1 @@
-<div class="row-fluid">
-
-	<div class="col-md-4">
-		<div class="panel panel-default">
-			<div class="panel-heading">
-				<h3 class="panel-title">{{t 'filterRestaurants'}}</h3>
-			</div>
-				<div class="panel-body">
-					<label>{{t 'rating'}}</label>
-					{{star-rating rating=filterRating on-click='updateRating'}}
-
-				   <label>{{t 'cuisine'}}</label>
-				   {{#power-select-multiple
-					  options=CUISINE_OPTIONS
-					  selected=selectedCuisins
-					  placeholder=(t 'selectCuisins')
-					  onchange=(action (mut selectedCuisins))
-					  as |cuisine|
-					}}
-					  {{cuisine.title}}
-					{{/power-select-multiple}}
-				 </div>
-		</div>
-	</div>
-
-	<div class="col-md-8">
-		<div class="panel panel-default">
-			<div class="panel-heading">
-				<h3 class="panel-title">{{t 'foundRestaurants' count=filteredRestaurants.length}}</h3>
-			</div>
-
-			<div class="panel-body">
-				{{#each filteredRestaurants as |restaurant| }}
-					<div class="media">
-						<a class="media-left">
-							<img class="media-object" src={{restaurant-img restaurant.id}} width="64" height="64">
-						</a>
-						<div class="media-body">
-							<h4 class="media-heading">{{restaurant.name}}</h4>
-							{{restaurant.description}}
-							{{star-rating rating=restaurant.rating}}
-						</div>
-					</div>
-				{{/each}}
-			</div>
-		</div>
-	</div>
-</div>
+{{outlet}}
