Fix padding for navbar right select

--- a/foodme/app/templates/components/nav-menu.hbs
+++ b/foodme/app/templates/components/nav-menu.hbs
@@ -27,7 +27,7 @@
 
     	{{! ChangeLanguage}}
 		<ul class="nav navbar-nav navbar-right">
-			<li>
+			<li class="for-button">
 				{{#power-select
 					selected=selectedLanguage
 					options=languages
