--- a/foodme/app/styles/app.scss
+++ b/foodme/app/styles/app.scss
@@ -1,2 +1,7 @@
 //@import 'ember-power-select/themes/material';
 @import 'ember-power-select';
+
+.navbar-nav>li.for-button {
+  padding-top: 15px;
+  padding-bottom: 15px;
+}
