--- a/foodme/app/templates/restaurants/index.hbs
+++ b/foodme/app/templates/restaurants/index.hbs
@@ -5,20 +5,24 @@
 			<div class="panel-heading">
 				<h3 class="panel-title">{{t 'filterRestaurants'}}</h3>
 			</div>
-				<div class="panel-body">
-					<!-- @TODO Rating filter here -->
+			<div class="panel-body">
+				<label>{{t 'rating'}}</label>
+				{{star-rating rating=filterRating on-click='updateRating'}}
 
-				   <label>{{t 'cuisine'}}</label>
-				   {{#power-select-multiple
-					  options=CUISINE_OPTIONS
-					  selected=selectedCuisins
-					  placeholder=(t 'selectCuisins')
-					  onchange=(action (mut selectedCuisins))
-					  as |cuisine|
-					}}
-					  {{cuisine.title}}
-					{{/power-select-multiple}}
-				 </div>
+				<label>{{t 'cuisine'}}</label>
+				{{#power-select-multiple
+					options=CUISINE_OPTIONS
+					selected=selectedCuisins
+					placeholder=(t 'selectCuisins')
+					onchange=(action (mut selectedCuisins))
+					as |cuisine|}}
+					{{cuisine.title}}
+				{{/power-select-multiple}}
+			</div>
+			<div class="panel-footer">
+				<button {{action 'clear'}} class="btn btn-link">{{t 'clear'}}</button>
+				<button {{action 'filter'}} class="btn btn-primary pull-right">{{t 'filter'}}</button>
+			</div>
 		</div>
 	</div>
 
@@ -30,16 +34,18 @@
 
 			<div class="panel-body">
 				{{#each filteredRestaurants as |restaurant| }}
-					{{#link-to 'restaurants.detail' restaurant class="media"}}
+					<div class="media">
 						<a class="media-left">
 							<img class="media-object" src={{restaurant-img restaurant.id}} width="64" height="64">
 						</a>
 						<div class="media-body">
-							<h4 class="media-heading">{{restaurant.name}}</h4>
+							<h4 class="media-heading">
+								{{link-to restaurant.name 'restaurants.detail' restaurant}} <small class="text-muted">{{restaurant.cuisine}}</small>
+							</h4>
 							{{restaurant.description}}
-
+							{{star-rating rating=restaurant.rating}}
 						</div>
-					{{/link-to}}
+					</div>
 				{{/each}}
 			</div>
 		</div>
