--- a/foodme/app/templates/restaurants.hbs
+++ b/foodme/app/templates/restaurants.hbs
@@ -1,39 +1,12 @@
 <div class="row-fluid">
-
-	<div class="col-md-4">
+	<div class="col-md-12">
 		<div class="panel panel-default">
 			<div class="panel-heading">
-				<h3 class="panel-title">{{t 'filterRestaurants'}}</h3>
-			</div>
-				<div class="panel-body">
-					<label>{{t 'rating'}}</label>
-					{{star-rating rating=filterRating on-click='updateRating'}}
-
-				   <label>{{t 'cuisine'}}</label>
-				   {{#power-select-multiple
-					  options=CUISINE_OPTIONS
-					  selected=selectedCuisins
-					  placeholder=(t 'selectCuisins')
-					  onchange=(action (mut selectedCuisins))
-					  as |cuisine|
-					}}
-					  {{cuisine.title}}
-					{{/power-select-multiple}}
-				 </div>
-			 <div class="panel-footer">
-				 <button {{action 'filter'}} class="btn btn-default">{{t 'filter'}}</button>
-			 </div>
-		</div>
-	</div>
-
-	<div class="col-md-8">
-		<div class="panel panel-default">
-			<div class="panel-heading">
-				<h3 class="panel-title">{{t 'foundRestaurants' count=filteredRestaurants.length}}</h3>
+				<h3 class="panel-title">{{t 'restaurants'}}</h3>
 			</div>
 
 			<div class="panel-body">
-				{{#each filteredRestaurants as |restaurant| }}
+				{{#each model as |restaurant| }}
 					<div class="media">
 						<a class="media-left">
 							<img class="media-object" src={{restaurant-img restaurant.id}} width="64" height="64">
@@ -41,7 +14,6 @@
 						<div class="media-body">
 							<h4 class="media-heading">{{restaurant.name}}</h4>
 							{{restaurant.description}}
-							{{star-rating rating=restaurant.rating}}
 						</div>
 					</div>
 				{{/each}}
